--- a/src/main/resources/templates/pokedex.html
+++ b/src/main/resources/templates/pokedex.html
@@ -10,15 +10,15 @@
         <div class="col-md-3">
             <div class="card shadow-sm mb-3">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">{{PokemonType.name}} <!--2--><span class="badge badge-secondary">Id {{PokemonType.id}} <!--3--></span></h4>
+                    <h4 class="my-0 font-weight-normal">{{name}} <!--2--><span class="badge badge-secondary">Id {{id}} <!--3--></span></h4>
                 </div>
-                <img class="card-img-top" src="{{}}" alt="Pokemon"/>
+                <img class="card-img-top" src="{{sprites.front_default}}" alt="Pokemon"/>
 
                 <div class="card-body">
-                    <span class="badge badge-primary">Speed : {{Stats.speed}}</span>
-                    <span class="badge badge-primary">Attack : {{Stats.attack}}</span>
-                    <span class="badge badge-primary">Defense : {{Stats.defense}}</span>
-                    <span class="badge badge-primary">HP : {{Stats.hp}}</span>
+                    <span class="badge badge-primary">Speed : {{stats.speed}}</span>
+                    <span class="badge badge-primary">Attack : {{stats.attack}}</span>
+                    <span class="badge badge-primary">Defense : {{stats.defense}}</span>
+                    <span class="badge badge-primary">HP : {{stats.hp}}</span>
                 </div>
             </div>
         </div>
