[prob] affichage trainers

--- a/src/main/resources/templates/trainers.html
+++ b/src/main/resources/templates/trainers.html
@@ -11,6 +11,9 @@
             <div class="card shadow-sm mb-3">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{name}}</h4>
+                    <h4 class="my-0 font-weight-normal">{{team}}</h4>
+
+
                 </div>
             </div>
         </div>
