--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -2,13 +2,13 @@
 
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="pokedex">
+            <a class="nav-link" href="/pokedex">
                 <img src="/icons/pokedex.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 Pokedex
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="trainers">
+            <a class="nav-link" href="/trainers">
                 <img src="/icons/player.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 Trainers
             </a>
@@ -16,7 +16,7 @@
     </ul>
 
     {{#user}}
-    <span class="navbar-text mr-md-3">Welcome {{username}}</span>
+    <span class="navbar-text mr-md-3">Welcome {{name}}</span>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="profile">
